Add test files to be ignored by git

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .vscode/
 build/
 */*yy.cpp
-
+*test*.in
 
 # Created by https://www.toptal.com/developers/gitignore/api/clion+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=clion+all
